--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -1530,7 +1530,7 @@ Then I give an example in which the internal dative case is more complex than th
 I end with an example in which the external dative case is more complex than the internal accusative case.
 I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head forms a constituent within the relative pronoun in these cases, and that it can therefore then be deleted.
 
-I start with the matching cases.
+I continue with the situation in which the cases match.
 Consider the example in \ref{ex:mg-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
 The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects. The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the accusative case. This is the element that surfaces.
 The external case is accusative as well, as the predicate \tit{einladen} `to invite' also takes accusative objects. The extra light head \tit{n} `\ac{elh}.\ac{an}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
@@ -1617,6 +1617,7 @@ I draw a dashed circle around each constituent that is a constituent in both the
 The extra light head consists of a single constituent: the \tsc{acc}P.
 This \tsc{acc}P is also a constituent within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 
+I continue with the situation in which the internal case is the more complex one.
 Consider the example in \ref{ex:mg-acc-dat-rep}, in which the internal dative case competes against the external accusative case. The relative clause is marked in bold.
 The internal case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects. The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the dative case. This is the element that surfaces.
 The external case is accusative, as the predicate \tit{einladen} `to invite' takes accusative objects. The extra light head \tit{n} `\ac{elh}.\ac{an}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
@@ -1709,8 +1710,8 @@ I draw a dashed circle around each constituent that is a constituent in both the
 The extra light head consists of a single constituent: the \tsc{acc}P.
 This \tsc{acc}P is also a constituent within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 
+I end with the situation in which the external case is the more complex one.
 Consider the examples in \ref{ex:mg-dat-acc-rep}, in which the internal accusative case competes against the external dative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
-
 The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects. The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the accusative case.
 The external case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects. The extra light head \tit{m} `\ac{elh}.\ac{an}.\ac{dat}' appears in the dative case.
 \ref{ex:mg-dat-acc-rep-rp} is the variant of the sentence in which the extra light head is absent (indicated by the square brackets) and the relative pronoun surfaces, and it is ungrammatical.
