--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1225,7 +1225,7 @@ In Chapter \ref{ch:deriving-internalonly}, I showed that the relative pronoun co
 
 It contains the pronominal feature \tsc{ref}, the gender features \tsc{cl} and \tsc{an}, the number feature \tsc{ind} and case features \tsc{k}.
 
-I introduced the lexical entries that are required to spell out these features in Section \ref{sec:pol-rel}. I repeat them in \ref{ex:pol-entries-rep}.
+I introduced the lexical entries that are required to spell out these features in Section \ref{sec:pol-rel}. I repeat them in \ref{ex:pol-entries-rep1}.
 
 \ex.\label{ex:pol-entries-rep}
 \a.\label{ex:pol-entry-o-rep}
@@ -1239,7 +1239,7 @@ I introduced the lexical entries that are required to spell out these features i
   ]
   {\draw (.east) node[right]{⇔ \tit{o}}; }
 \end{forest}
-\b. \label{ex:pol-entry-go-rep}
+\b. \label{ex:pol-entry-go-rep1}
 \begin{forest} boom
   [\tsc{acc}P
       [\tsc{f}2]
@@ -1252,7 +1252,7 @@ I introduced the lexical entries that are required to spell out these features i
   ]
   {\draw (.east) node[right]{⇔ \tit{go}}; }
 \end{forest}
-\b. \label{ex:pol-entry-mu-rep}
+\b. \label{ex:pol-entry-mu-rep1}
 \begin{forest} boom
   [\tsc{dat}P
       [\tsc{f}3]
@@ -1289,7 +1289,7 @@ In what follows, I construct the Polish extra light heads. Until the feature \ts
   ]
 \end{forest}
 
-Next, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the lexical entries Polish. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
+Next, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the lexical entries Polish. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep1}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
 
 \ex.\label{ex:pol-elh-nom}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1325,7 +1325,7 @@ Next, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \t
 \end{adjustbox}
 
 For the accusative extra light head, the last feature is merged: the \tsc{f}2.
-The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-acc}.
+The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep1}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-acc}.
 
 \ex.\label{ex:pol-elh-acc}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1365,7 +1365,7 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
 
 For the dative relative pronoun, one more feature is merged: the \tsc{f}3.
 The feature  is merged with the \tsc{acc}P, forming an \tsc{dat}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{acc}P, the \tsc{an}P, is moved to the specifier of \tsc{dat}P.
-This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep}, so it is spelled out as \tit{mu}, as shown in \ref{ex:pol-elh-dat}.
+This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep1}, so it is spelled out as \tit{mu}, as shown in \ref{ex:pol-elh-dat}.
 
 \ex.\label{ex:pol-elh-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
