--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -441,28 +441,31 @@ not: `and he replied to whoever spoke to him'
 
 \section{Comparing constituents}\label{sec:comparing-ohg}
 
-In this section, I compare the constituents of extra light heads to those of relative pronouns in Modern German. This is the worked out version of the comparisons in Section \ref{sec:basic-internal}. What is different here is that I show the comparison for Modern German specifically, and that I motivated the content of the constituents that are being compared.
+In this section, I compare the constituents of extra light heads and light heads to those of relative pronouns in Old High German. This is the worked out version of the comparisons in Section \ref{sec:basic-unrestricted}. What is different here is that I show the comparison for Old High German specifically, and that I motivated the content of the constituents that are being compared.
 
 I give three examples, in which the internal and external case vary.
-I start with an example with matching cases, in which the internal and the external case are both accusative.
-Then I give an example in which the internal dative case is more complex than the external accusative case.
-I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head forms a constituent within the relative pronoun in these cases, and that it can therefore then be deleted.
+I start with an example with matching cases, in which the internal and the external case are both nominative. I show that the grammaticality of the example can be derived by either taking the extra light head or by taking the light head as the present light head.
+Then I give an example in which the internal accusative case is more complex than the external nominative case. I show that the grammaticality of this example can only be derived by taking the extra light head as the present light head and not the light head.
+I end with an example in which the external accusative case is more complex than the internal nominative case. I show that the grammaticality of this example can only be derived by taking the light head as the present light head and not the extra light head.
 
-
-
-
-
-\subsection{With the extra light head}
 
 I start with the situation in which the cases match.
-Consider the example in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clause is marked in bold.
-The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects. The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. This is the element that surfaces.
-The external case is nominative as well, as the predicate \tit{queman} `to come' also takes nominative subjects. The light head \tit{r} `\tsc{elh}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
+Consider the example in \ref{ex:ohg-nom-nom-rep}, in which the internal nominative case competes against the external nominative case. The relative clause is marked in bold. \ref{ex:ohg-nom-nom-elh} shows the example with the extra light head as the present light head and \ref{ex:ohg-nom-nom-lh} shows the example with the light head as the present light head.
+The internal case is nominative, as the predicate \tit{senten} `to send' takes nominative subjects.
+In both examples, the relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
+The external case is nominative as well, as the predicate \tit{queman} `to come' also takes nominative subjects.
+In \ref{ex:ohg-nom-nom-elh}, the light head \tit{r} `\tsc{elh}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
+In \ref{ex:ohg-nom-nom-lh}, the light head \tit{dher} `\tsc{dem}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. Here the relative pronoun is placed between square brackets because it does not surface.
 
-\exg. quham [r] \tbf{dher} \tbf{chisendit} \tbf{scolda} \tbf{uuerdhan}\\
+\ex.\label{ex:ohg-nom-nom-rep}
+\ag. quham [r] \tbf{dher} \tbf{chisendit} \tbf{scolda} \tbf{uuerdhan}\\
+ come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{elh}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-elh}
+\bg. quham dher [\tbf{dher}] \tbf{chisendit} \tbf{scolda} \tbf{uuerdhan}\\
  come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
- `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep}
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-lh}
+
+both can derive the right result, first give one, then the other one
 
 In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
@@ -535,6 +538,19 @@ I draw a dashed circle around each constituent that is a constituent in both the
 
 The extra light head consists of a single constituent: the \tsc{nom}P.
 This \tsc{nom}P is also a constituent within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+
+
+
+here give the one with light head
+
+
+
+
+
+
+
+
+
 
 I continue with the situation in which the internal case is the more complex one.
 Consider the example in \ref{ex:ohg-nom-acc-rep}, in which the internal accusative case competes against the external nominative case. The relative clause is marked in bold.
@@ -622,6 +638,37 @@ I draw a dashed circle around each constituent that is a constituent in both the
 
 The extra light head consists of a single constituent: the \tsc{nom}P.
 This \tsc{nom}P is also a constituent within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+
+
+
+I end with the situation in which the external case is the more complex one.
+Consider the examples in \ref{ex:ohg-acc-nom-rep}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
+The surface pronoun is \tit{dhen} `\ac{dem}.\ac{sg}.\ac{m}.\ac{acc}'.
+The internal case is nominative, as the predicate \tit{gisizzen} `to possess' takes nominative subjects.
+The external case is accusative, as the predicate \tit{bibringan} `to create' takes accusative objects.
+
+
+The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
+The light head  appears in the accusative case. This is the element that surfaces.
+
+I end with the situation in which the external case is the more complex one.
+Consider the examples in \ref{ex:mg-dat-acc-rep}, in which the internal accusative case competes against the external dative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
+The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects. The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the accusative case.
+The external case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects. The extra light head \tit{m} `\ac{elh}.\ac{an}.\ac{dat}' appears in the dative case.
+\ref{ex:mg-dat-acc-rep-rp} is the variant of the sentence in which the extra light head is absent (indicated by the square brackets) and the relative pronoun surfaces, and it is ungrammatical.
+\ref{ex:mg-dat-acc-rep-lh} is the variant of the sentence in which the relative pronoun is absent (indicated by the square brackets) and the extra light head surfaces, and it is ungrammatical too.
+
+\exg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
+1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-rep}
+
+
+
+
+
+
+
+
 
 \subsection{With the light head}
 
