weer stukje verder
nog wel op zoek naar mooie bomen

--- a/discussion.tex
+++ b/discussion.tex
@@ -2,6 +2,11 @@
 
 \chapter{Discussion}\label{ch:discussion}
 
+\section{Gothic}
+
+
+Gothic seems to be a variant of Old High German, in which there is also no single constituent containment. This time, the relative pronoun is not deleted by syncretism. Gothic has a separate suffix that spells out the feature \tsc{rel}. The light head deletes the relative pronoun, except for the suffix that spells out \tsc{rel}. The light head and the relative pronoun phonologically merge together, and the surface pronoun appears in the external case.
+
 
 \section{Diachronic part}
 
