--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,9 @@
-\documentclass[11pt,hidelinks]{memoir}
+\documentclass[11pt,hidelinks,a4paper]{memoir}
 
-\includeonly{deriving-unrestricted}
+% \includeonly{deriving-unrestricted}
+%
+% \setulmarginsandblock{3.3cm}{4cm}{*}
+% \setlrmarginsandblock{3cm}{3cm}{*}
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
